[gd_scene load_steps=3 format=3 uid="uid://b7h3k2m8x9q4w"]

[ext_resource type="Script" path="res://ui/pets/PetUI.gd" id="1_pet_ui_script"]

[sub_resource type="Theme" id="theme_pet_ui"]

[node name="PetUI" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 400.0
grow_horizontal = 0
theme = SubResource("theme_pet_ui")
script = ExtResource("1_pet_ui_script")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
modulate = Color(0, 0, 0, 0.6)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Pet Companion"
horizontal_alignment = 1

[node name="HSeparator1" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="PetListContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PetSelectorLabel" type="Label" parent="VBoxContainer/PetListContainer"]
layout_mode = 2
text = "Pets Disponíveis:"

[node name="PetSelector" type="OptionButton" parent="VBoxContainer/PetListContainer"]
layout_mode = 2
placeholder = "Selecionar Pet"
fit_to_longest_item = false

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ActivePetContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ActivePetLabel" type="Label" parent="VBoxContainer/ActivePetContainer"]
layout_mode = 2
text = "Pet Ativo:"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ActivePetContainer"]
layout_mode = 2

[node name="PetIcon" type="TextureRect" parent="VBoxContainer/ActivePetContainer/HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(48, 48)
expand_mode = 1

[node name="PetInfo" type="VBoxContainer" parent="VBoxContainer/ActivePetContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PetName" type="Label" parent="VBoxContainer/ActivePetContainer/HBoxContainer/PetInfo"]
layout_mode = 2
text = "Nenhum Pet Ativo"

[node name="PetLevel" type="Label" parent="VBoxContainer/ActivePetContainer/HBoxContainer/PetInfo"]
layout_mode = 2
text = ""
modulate = Color(0.8, 0.8, 0.8, 1)

[node name="SummonDismissButton" type="Button" parent="VBoxContainer/ActivePetContainer/HBoxContainer"]
layout_mode = 2
text = "Invocar"

[node name="XPContainer" type="VBoxContainer" parent="VBoxContainer/ActivePetContainer"]
layout_mode = 2

[node name="XPLabel" type="Label" parent="VBoxContainer/ActivePetContainer/XPContainer"]
layout_mode = 2
text = "Experiência:"

[node name="XPBar" type="ProgressBar" parent="VBoxContainer/ActivePetContainer/XPContainer"]
layout_mode = 2
max_value = 100.0
show_percentage = true

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Atributos:"

[node name="StatsGrid" type="GridContainer" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
columns = 2

[node name="HealthLabel" type="Label" parent="VBoxContainer/StatsContainer/StatsGrid"]
layout_mode = 2
text = "Vida: --"

[node name="AttackLabel" type="Label" parent="VBoxContainer/StatsContainer/StatsGrid"]
layout_mode = 2
text = "Ataque: --"

[node name="DefenseLabel" type="Label" parent="VBoxContainer/StatsContainer/StatsGrid"]
layout_mode = 2
text = "Defesa: --"

[node name="SpeedLabel" type="Label" parent="VBoxContainer/StatsContainer/StatsGrid"]
layout_mode = 2
text = "Velocidade: --"

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="AbilitiesContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AbilitiesLabel" type="Label" parent="VBoxContainer/AbilitiesContainer"]
layout_mode = 2
text = "Habilidades:"

[node name="AbilityButtons" type="HBoxContainer" parent="VBoxContainer/AbilitiesContainer"]
layout_mode = 2
alignment = 1